# ecospheres-secateur

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  metadata.txt  plugin.py  pyproject.toml
core/: commune_api.py  commune_selector.py  constants.py  entities_selector.py  export.py  geopdf_utils.py  image_manager.py  intersector.py  layer_resolver.py  logger.py  utils.py
resources/: report_page.qpt  simple_grid_layout.qpt  simple_legend_layout.qpt
stubs/qgis/PyQt/: QtCore.pyi  QtGui.pyi  QtWidgets.pyi  QtXml.pyi  __init__.pyi
tests/: test_panel_error_handling.py  test_service.py
ui/: dialog.py  panel.py  service.py  settings.py
